# kagi-cli-py

./: API.md  CONVENTIONS.md  README.md  TESTING.md  flake.nix  main.py  pyproject.toml
.github/workflows/: release.yml
kagi_client/: __init__.py  assistant.py  auth.py  cli.py  client.py  errors.py  formatters.py  models.py  proofread.py  search.py  streams.py  summarizer.py
tests/: conftest.py
tests/integration/: test_client.py
tests/unit/: test_assistant.py  test_auth.py  test_cli.py  test_errors.py  test_formatters.py  test_models.py  test_proofread.py  test_search.py  test_streams.py  test_summarizer.py
